<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QoL Smartphone Test</string>
    <string name="fake_app_name">QoL Smartphone Test</string>
    <string name="record_data">Record data</string>
    <string name="data">Send backup data</string>
    <string name="stop_record_data">Stop record</string>
    <string name="title_dialog_survey">Questions</string>
    <string name="sure_dialog_survey">OK I\'m sure !!</string>
    <string name="ok">OK</string>
    <string name="survey_not_completed">Survey not completed. Please check your answers.</string>
    <string name="how_do_you_feel">How do you feel?</string>
    <string name="negative_valence">Negative valence</string>
    <string name="positive_valence">Positive valence</string>
    <string name="low_energy">Low energy</string>
    <string name="high_energy">High energy</string>
    <string name="not_stressed">Not stressed</string>
    <string name="stressed">Stressed</string>
    <string name="choose_name_avatar">Choose a Nickname and an avatar</string>
    <string name="name_hint">Your Nickname</string>
    <string name="avatar">Choose an avatar</string>
    <string name="remaining_time">Remaining time: </string>
    <string name="done">OK I\'ve done it.</string>
    <string name="search_this_icons">Find all the occurrences of these icons &#8230;</string>
    <string name="ready_to_start">OK I\'m ready to go!</string>
    <string name="offline_game">Let\'s start</string>
    <string name="online_game">Play online</string>
    <string name="ready">Ready!</string>
    <string name="start">Start!</string>
    <string name="submit">Submit</string>
    <string name="make_resume">Let\'s make a short resume!!</string>
    <string name="total_icons">Total icons on screen: </string>
    <string name="icons_find">Icons to find: </string>
    <string name="icons_found">Icons you find: </string>
    <string name="missing_icons">Missing icons: </string>
    <string name="times_randomly_clicked">Times you randomly clicked: </string>
    <string name="yeah_i_was_bad">Yeah I was really bad</string>
    <string name="yeah_i_know_harder">Yes I know! It will become harder now!</string>
    <string name="write_paragraph_here">Please write the paragraph here.</string>
    <string name="instruction_write_paragraph">When you are ready click "Start" and write the paragraph you see.</string>
    <string name="before_time_expires">Of course: before time expires. :)</string>
    <string name="number_word_write">Number of words to write: </string>
    <string name="number_correct_words">Number of correct written words: </string>
    <string name="number_wrong_words">Number of wrong written words: </string>
    <string name="bit_wrong">Yes it\'s a bit wrong..</string>
    <string name="question_marks">\?\?\?\?\?\?</string>
    <string name="really">Really??</string>
    <string name="try_another_time">OK let\'s do it again!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="wait">Please wait!</string>
    <string name="start_from">Let\'s start \n from:</string>
    <string name="greetings">Thank you for your partecipation.</string>
    <string name="close_app">Close application</string>
    <string name="send_me_data">Send me your data!</string>
    <string name="check_answer">Hey check your answers. They could not be correct.</string>
    <string name="goodbye">Goodbye!</string>
    <string name="something_went_wrong">Something went wrong. Please contact the support.</string>
    <string name="no_network">You are not currently connected to any network. Please activate WiFi to send data.</string>
    <string name="uploading">Uploading data.</string>
    <string name="message_uploading">Uploading your data. Please Wait.</string>
    <string name="thanks">Upload completed. Thank you.</string>
    <string name="thank_you">Thank you</string>
    <string name="lottery_gift">Lottery info</string>
    <string name="further_info">For further info about the lottery, please visit:</string>
    <string name="connecting">Connecting</string>
    <string name="connecting_please_wait">Waiting for the game. Please be patient.</string>
    <string name="please_provide_nickname">Please provide a nickname!</string>
    <string name="please_choose_avatar">Please choose your avatar!</string>
    <string name="connection_closed">Connection closed from the server.</string>
    <string name="waiting_to_start">Waiting for all the other users. Please wait.</string>
    <string name="waiting">Waiting . . .</string>
    <string name="next_time">Maybe next time</string>
    <string name="not_selected_game">You were not selected for the game. Goodbye!</string>
    <string name="wait_next_step">Please wait the other players for the next step.</string>
    <string name="pause">Pause</string>
    <string name="break_one_minute">Let\'s take a break for one minute.</string>
    <string name="your_final_position">Your final position: </string>
    <string name="error">Error!</string>
    <string name="network_not_working">Network problem. Please try again.</string>
    <string name="retry">Retry</string>
    <string name="discard">Discard</string>
    <string name="proceed">Continue</string>
    <string name="wait_final_results">Waiting for the final result. Please be patient.</string>
    <string name="feed_troll">Troll is hungry\nFeed with some points :)</string>
    <string name="restart">Restart</string>
    <string name="nickname_used">Nickname already in use. Please choose another one.</string>
    <string name="yes">Yess</string>
    <string name="message">Message</string>
    <string name="watch_screen">Hey, pull up your face and watch on the screen...</string>
    <string name="start_battle">Ok, start the battle now!</string>
    <string name="relax">Relax</string>
    <string name="relax_text">Now just relax and enjoy the music...</string>
    <string name="and_now">And now...</string>
    <string name="some_math_problems">... some mathematical problems</string>
    <string name="gender">Gender: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age:</string>
    <string name="nickname">Nickname:</string>
    <string name="email">Email: </string>
    <string name="error_user_info">Please provide all the necessary information before continue.</string>
    <string name="input_user_info_not_correct">THe info provided are not correct. Please check them.</string>
    <string name="your_information">Some info about you</string>
    <string name="about">About</string>
    <string name="disclaimer">This application was developed by the University of Geneva and the University of Padua (Italy). No personal data will be provided to any third party and it will be used only for research purposes and for the final lottery. For any further info feel free to contact us.</string>
	<string name="website">Website: </string>
	<string name="contact">Contact us:</string>
</resources>
