<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/greetings"
        android:textSize="@dimen/xl_size_font" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_gravity="center"
        android:gravity="center">
        
        <ImageView 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:src="@drawable/relax4"/>
    </LinearLayout>
    
    <Button 
        android:id="@+id/buttonUploadFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_me_data"
        android:onClick="sendDataToServer"/>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center">
        
        <Button
            android:id="@+id/buttonRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart"
            android:enabled="false"
            android:onClick="restartFromBeginning"
            android:visibility="gone" />
        
        <Button 
	        android:id="@+id/buttonExit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/goodbye"
	        android:enabled="false"
	        android:onClick="closeApplication"/>
        
    </LinearLayout>
    
</LinearLayout>
