<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_resume" 
        android:textSize="@dimen/l_font_size"
        android:layout_margin="@dimen/margin_between_widgets"
        android:layout_gravity="center"
        android:gravity="center" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_icons"
            android:layout_margin="@dimen/margin_between_widgets"/>
        
        <TextView
            android:id="@+id/totalIconsOnScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_widgets"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icons_find"
            android:layout_margin="@dimen/margin_between_widgets" />
        
        <TextView
            android:id="@+id/totalIconsToFind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_widgets" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icons_found"
            android:layout_margin="@dimen/margin_between_widgets" />
        
        <TextView
            android:id="@+id/totalIconsFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_widgets" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_icons"
            android:layout_margin="@dimen/margin_between_widgets"/>
        
        <TextView
            android:id="@+id/totalMissingIcons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_widgets" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_randomly_clicked">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/times_randomly_clicked"
            android:layout_margin="@dimen/margin_between_widgets"/>
        
        <TextView
            android:id="@+id/timesRandomlyClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_widgets" />
    </LinearLayout>

</LinearLayout>
