<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/xl_size_font"
        android:text="@string/fake_app_name"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_gravity="center"
        android:gravity="center">
        
        <ImageView 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:src="@drawable/qol"
            android:keepScreenOn="true"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">
        
        <Button 
            android:id="@+id/startOnlineGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online_game"
            android:textSize="@dimen/m_font_size"
            android:layout_margin="@dimen/margin_between_widgets"
            android:onClick="startOnlineGame"
            android:visibility="gone" />
        
        <Button
	        android:id="@+id/startOfflineGame"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/offline_game"
	        android:textSize="@dimen/m_font_size"
	        android:layout_margin="@dimen/margin_between_widgets"
	        android:onClick="startOfflineGame" />
        
    </LinearLayout>
    

</LinearLayout>
